Fix .emoji to not be cut off

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1953,9 +1953,6 @@ part/quit messages where we don't load previews (adds a blank line otherwise) */
 }
 
 .emoji {
-	font-size: 1.4em;
-	vertical-align: text-top;
-	line-height: 1;
 	font-family: 'Apple Color Emoji';
 }
 
